# license-scout

./: .gitignore  Cargo.toml  README.md
src/: cache.rs  cli.rs  main.rs  metadata.rs  output.rs  progress.rs  scan.rs  types.rs
